RESOLVED FIXED211456
Fix urlsearchparams-delete.html
https://bugs.webkit.org/show_bug.cgi?id=211456
Summary Fix urlsearchparams-delete.html
Rob Buis
Reported 2020-05-05 11:16:55 PDT
Fix urlsearchparams-delete.html by unconditionally calling the update steps as specified in Step 2: https://url.spec.whatwg.org/#dom-urlsearchparams-delete
Attachments
Patch (2.86 KB, patch)
2020-05-05 11:21 PDT, Rob Buis
no flags
Patch (3.11 KB, patch)
2020-05-08 10:09 PDT, Rob Buis
no flags
Patch (1.95 KB, patch)
2020-05-08 12:49 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2020-05-05 11:21:53 PDT
Daniel Bates
Comment 2 2020-05-07 10:38:13 PDT
Comment on attachment 398530 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398530&action=review > Source/WebCore/ChangeLog:7 > + Patch is ok as-is. No change needed. A better patch would explain the bug fix here.
Rob Buis
Comment 3 2020-05-08 10:09:43 PDT
EWS
Comment 4 2020-05-08 10:57:59 PDT
Committed r261399: <https://trac.webkit.org/changeset/261399> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398870 [details].
Radar WebKit Bug Importer
Comment 5 2020-05-08 10:58:15 PDT
Rob Buis
Comment 6 2020-05-08 12:48:29 PDT
Comment on attachment 398530 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398530&action=review >> Source/WebCore/ChangeLog:7 >> + > > Patch is ok as-is. No change needed. A better patch would explain the bug fix here. Yes, I am not sure what happened there :) Anyway added it before landing.
Rob Buis
Comment 7 2020-05-08 12:49:39 PDT
Reopening to attach new patch.
Rob Buis
Comment 8 2020-05-08 12:49:42 PDT
Rob Buis
Comment 9 2020-05-09 09:01:19 PDT
Oops, uploaded to wrong bug.
Yusuke Suzuki
Comment 10 2022-01-22 16:03:22 PST
*** Bug 193022 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.