Fix urlsearchparams-delete.html https://bugs.webkit.org/show_bug.cgi?id=211456

Patch by Rob Buis <rbuis@igalia.com> on 2020-05-08
Reviewed by Daniel Bates.

LayoutTests/imported/w3c:

Update improved test expectation.

* web-platform-tests/url/urlsearchparams-delete-expected.txt:

Source/WebCore:

Step 2 of URLSearchParams.delete algorithm [1] indicates
we should run the update steps, even if no name-value
pairs were removed.

Behavior matches Chrome and Firefox.

[1] https://url.spec.whatwg.org/#dom-urlsearchparams-delete

Test: web-platform-tests/url/urlsearchparams-delete.html

* html/URLSearchParams.cpp:
(WebCore::URLSearchParams::remove):

Canonical link: https://commits.webkit.org/224549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261399 268f45cc-cd09-0410-ab3c-d52691b4dbfc